@@ -62,9 +62,9 @@ public class MovieMaker
             Object[] f = (Object[]) encoderClass.
                 getMethod("getEncodingFormats", new Class[] {Float.TYPE, BufferedImage.class}).
                 invoke(null, new Object[] { 
-                	//new Float(fps), 
-                	Float.valueOf(fps), 
-                	typicalImage });
+                        //new Float(fps), 
+                        Float.valueOf(fps), 
+                        typicalImage });
             if (f==null) return false;
             
             // init the dialog panel
@@ -139,9 +139,9 @@ public class MovieMaker
             f = (Object[])encoderClass.
                 getMethod("getEncodingFormats", new Class[] {Float.TYPE, BufferedImage.class}).
                 invoke(null, new Object[] { 
-//                	new Float(fps), 
-                	Float.valueOf(fps), 
-                	typicalImage });
+//                      new Float(fps), 
+                        Float.valueOf(fps), 
+                        typicalImage });
             
             // now choose the same one as before but with the fps
             // And we hope that the same encoding formats show up with the different framerate's query--
@@ -165,11 +165,11 @@ public class MovieMaker
                         Class.forName("javax.media.Format")
                         }).
                     newInstance(new Object[]{
-                    						// new Float(fps), 
-                    						 Float.valueOf(fps), 
-                                             new File(fd.getDirectory(), Utilities.ensureFileEndsWith(fd.getFile(),".mov")),
-                                             typicalImage,
-                                             f[encodeFormatIndex]});
+                            // new Float(fps), 
+                            Float.valueOf(fps), 
+                            new File(fd.getDirectory(), Utilities.ensureFileEndsWith(fd.getFile(),".mov")),
+                            typicalImage,
+                            f[encodeFormatIndex]});
                 }
             else return false;
             }
